# kitchenaid

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/: launch.json
api/: index.py
docs/: AI_SETUP.md  ALLERGEN_DATA.md  DEPLOY.md  LEGAL.md  NEXT_STEPS.md  PERSISTENCE.md  PHASE_0_DESIGN.md  PRIVACY.md  PRODUCTION_READINESS.md  ROADMAP.md  SECURITY.md
examples/: concierge_demo.py  corpus_harvest.py  feedback_demo.py  generative_chef_run.py  llm_chef_friction.py  shopping_demo.py
ios/: .gitignore  README.md  project.yml
kitchenaid/: __init__.py  accounts.py  agent.py  api.py  auth.py  budget.py  chef.py  cli.py  concierge.py  config.py  data.py  dietitian.py  eval_harness.py  eval_resolution.py  mcp_server.py  models.py  pantry.py  profile_keeper.py  ratelimit.py  resolution.py  shopper.py  store.py  taste.py  taster.py  tools.py
migrations/: 0001_init.sql  0002_profile.sql  0003_users.sql  0004_session.sql
tests/: test_accounts.py  test_agent_options.py  test_allergen_coverage.py  test_api.py  test_auth.py  test_budget.py  test_concierge.py  test_constraints.py  test_dietitian.py  test_edgecases_resolution.py  test_eval_harness.py  test_feedback_visibility.py  test_gate_properties.py  test_mcp_server.py  test_migrations.py  test_query_relevance.py  test_ratelimit.py  test_resolution.py  test_resolution_classify.py  test_shopper.py  test_store_postgres.py  test_taster.py
web/: README.md  api.js  app.js  index.html  store.js  styles.css
(+30 files in other folders)
